<resources>
    <string name="app_name">Geo Tracker</string>
    <string name="notification_text">Geo Tracker is collecting location</string>
    <string name="notification_title">Geo Tracker, distance: %1$.2fkm, time: %2$s</string>
    <string name="menu_settings">Settings</string>
    <string name="recording_in_progress">Recording</string>
    <string name="distance_format">%1$.2fkm</string>
    <string name="distance_gpx_format">%1$.2fkm of %2$.2fkm</string>
    <string name="speed_format">%1$.2fkm\\h</string>
    <string name="button_ok">OK</string>
    <string name="button_save">Save</string>
    <string name="button_discard">Discard</string>
    <string name="button_stop">Stop</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_close">Close</string>
    <string name="button_delete">Delete</string>
    <string name="enter_label_title">Enter label</string>
    <string name="label_hint">Label</string>
    <string name="start_format">Start: %s</string>
    <string name="end_format">End: %s</string>
    <string name="empty">[Empty]</string>
    <string name="empty_label_validation">Label cannot be empty</string>
    <string name="location_is_not_enabled">Location is not enabled, please enable to start recording.</string>
    <string name="permissions_are_required">Location permissions are required to track your location.</string>
    <string name="trip_time">Trip time</string>
    <string name="trip_from">from</string>
    <string name="trip_to">to</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="speed">Speed</string>
    <string name="avg_speed">Average speed</string>
    <string name="points">(%d points)</string>
    <string name="default_track_name">Trasa</string>
    <string name="total_distance">You made</string>
    <string name="total_in">in</string>
    <string name="delete_points_title">Delete points</string>
    <string name="delete_points_message">Are you sure to delete all points form this track?</string>
    <string name="delete_points_success">Points were deleted.</string>
    <string name="points_deleted">Points were deleted.</string>

    <string name="delete_message">Delete track \"%s\"</string>
    <string name="delete_yes">Yes</string>
    <string name="delete_no">No</string>

    <string name="track_was_fixed">Track endTimestamp was fixed.</string>
    <string name="exit_while_recording">Exit app while recording?</string>
    <string name="wait_for"><![CDATA[Wait for <b>%ds</b>]]></string>
    <string name="seek_start">Start</string>
    <string name="seek_end">End</string>
    <string name="seek_summary">Overall points: %d, after cut: %d</string>
    <string name="delete_success">Points were deleted</string>
    <string name="add_place_info">Tap on map to add place to visit</string>
    <string name="dialog_add_place_label">Enter place label</string>
    <string name="dialog_place_label">Place to visit</string>
    <string name="location_format">Location: %1$.4f, %2$.4f</string>
    <string name="calendar_month_format">%s, %.2fkm, %d days ridden</string>
    <string name="calendar_year_header">%d days ridden this year</string>

    <string name="settings_gps_category">Settings</string>
    <string name="settings_backup_category">Backup</string>
    <string name="settings_other_category">Other</string>
    <string name="settings_data_size_title">Application database size</string>
    <string name="settings_interval_dialog_title">Minimum interval</string>
    <string name="settings_interval_summary">Set interval in seconds</string>
    <string name="settings_interval">Location refresh min interval [s]</string>
    <string name="settings_distance_dialog_title">Minimum distance</string>
    <string name="settings_distance_summary">Set distance in meters</string>
    <string name="settings_distance">Locaton refresh min distance [m]</string>
    <string name="settings_notification_distance">Notification min distance [m]</string>
    <string name="settings_notification_distance_title">Set distance in meters</string>
    <string name="settings_nth_points_to_skip">Nth points to skip</string>
    <string name="settings_nth_points_to_skip_title">Skip rows to increase performance when displaying all tracks on map</string>
    <string name="settings_live_tracking_title">Live tracking</string>
    <string name="settings_activity_detection">Activity detection</string>
    <string name="settings_activity_detection_summary">Start tracking when detected on bicycle</string>
    <string name="settings_backup_button_title">Make backup</string>
    <string name="settings_backup_button_key">backup_button</string>
    <string name="settings_restore_button_title">Restore data from backup</string>
    <string name="settings_restore_button_key">restore_button</string>
    <string name="settings_db_size">preference_db_size</string>
    <string name="settings_backup_success">Backup was saved to: %s</string>
    <string name="settings_backup_error">Unable to make a backup, check logs for more details!</string>
    <string name="settings_restore_success">Data was restored!</string>
    <string name="settings_restore_error">Unable to make restore data, check logs for more details!</string>
    <string name="settings_map_style_title">Map style</string>

    <string-array name="settings_map_styles">
        <item>Classic</item>
        <item>Dark</item>
        <item>Custom</item>
    </string-array>

    <string-array name="settings_map_styles_ids">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
</resources>
