<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/settings_gps_category">
        <EditTextPreference
            android:key="gps_update_interval_key"
            android:title="@string/settings_interval"
            android:summary="@string/settings_interval_summary"
            android:dialogTitle="@string/settings_interval_dialog_title"
            android:defaultValue="@integer/default_gps_interval"
            app:useSimpleSummaryProvider="true"
            />
        <EditTextPreference
            android:key="gps_min_distance_key"
            android:title="@string/settings_distance"
            android:summary="@string/settings_distance_summary"
            android:dialogTitle="@string/settings_distance_dialog_title"
            android:defaultValue="@integer/default_gps_distance"
            app:useSimpleSummaryProvider="true"
            />
    </PreferenceCategory>
</PreferenceScreen>