<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_add_place_label"
        android:padding="@dimen/padding_medium"
        android:textAlignment="center"
        android:textSize="18sp"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#aaa"
        />
    <EditText
        android:id="@+id/input_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_medium"
        android:layout_marginEnd="@dimen/padding_medium"
        android:layout_marginTop="@dimen/padding_medium"
        android:hint="@string/label_hint"
        android:inputType="text"
        />
    <TextView
        android:id="@+id/position_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_medium"
        android:layout_marginEnd="@dimen/padding_medium"
        android:layout_marginTop="@dimen/padding_medium"
        tools:text="Location: 52.6171, 21.9126"
        />
    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/button_save"
        />

</LinearLayout>
