<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:viewBindingIgnore="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:fitsSystemWindows="true"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:expandedTitleGravity="bottom"
            app:expandedTitleTextAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/padding_medium"
                app:layout_collapseMode="pin">

                <TextView
                    android:id="@+id/sum_distance_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="@dimen/padding_medium"
                    android:text="@string/total_distance"
                    style="@style/summary_label"
                    />
                <TextView
                    android:id="@+id/sum_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sum_distance_title"
                    tools:text="145.09km"
                    android:text="00.00km"
                    style="@style/summary_value"
                    />
                <TextView
                    android:id="@+id/sum_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/sum_distance"
                    app:layout_constraintTop_toTopOf="@id/sum_distance"
                    android:text="@string/total_in"
                    android:paddingStart="@dimen/padding_small"
                    android:paddingEnd="@dimen/padding_small"
                    android:textSize="24sp"
                    />
                <TextView
                    android:id="@+id/sum_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/sum_in"
                    app:layout_constraintTop_toTopOf="@id/sum_distance"
                    tools:text="5h 14m 6s"
                    android:text="00h 00m 00s"
                    style="@style/summary_value"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <!--

    TODO: fix ExpandableListView height in CoordinatorLayout

    -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="618dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <ExpandableListView
            android:id="@+id/tracks_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <FrameLayout
            android:id="@+id/loading_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#6000"
            android:visibility="gone"
            >
            <ProgressBar
                android:id="@+id/progress_view"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:indeterminate="false"
                android:progressDrawable="@drawable/circular_progress_bar"
                android:max="100"
                android:progress="50"
                />
        </FrameLayout>
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        >
        <androidx.constraintlayout.widget.Placeholder
            android:id="@+id/floating_placeholder_inner"
            android:layout_width="54dp"
            android:layout_height="54dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="@dimen/padding_large"
            />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_all_tracks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/floating_placeholder_inner"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/padding_large"
            android:layout_marginBottom="@dimen/padding_medium"
            android:src="@drawable/ic_all"
            />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/button_all_tracks"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/padding_large"
            android:layout_marginBottom="@dimen/padding_medium"
            android:src="@drawable/ic_calendar"
            />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/button_calendar"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/padding_large"
            android:layout_marginBottom="@dimen/padding_medium"
            android:src="@drawable/ic_settings"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/status_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D000"
        android:visibility="gone"
        >

        <androidx.legacy.widget.Space
            android:id="@+id/center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <FrameLayout
            android:id="@+id/record_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/padding_large"
            android:layout_marginEnd="@dimen/padding_large"
            android:padding="@dimen/padding_medium"
            android:background="@color/colorPrimary">
            <TextView
                android:id="@+id/recording_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recording_in_progress"
                android:textColor="@android:color/white"
                android:textSize="28dp"
                android:layout_gravity="start"
                />
            <ImageView
                android:id="@+id/recording_animation"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_record"
                android:padding="8dp"
                android:layout_gravity="center_vertical|end"
                />
        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/label_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/record_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/padding_large"
            android:layout_marginEnd="@dimen/padding_large"
            android:layout_marginTop="@dimen/padding_medium"
            android:padding="@dimen/padding_medium"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/distance_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/distance"
                style="@style/default_label"
                />
            <TextView
                android:id="@+id/distance_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/distance_label"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="21.00km"
                style="@style/default_label_value"
                />

            <TextView
                android:id="@+id/speed_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/distance_value"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/speed"
                android:layout_marginTop="@dimen/padding_small"
                style="@style/default_label"
                />
            <TextView
                android:id="@+id/speed_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/speed_label"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="22.12km\\h"
                style="@style/default_label_value"
                />

            <TextView
                android:id="@+id/avg_speed_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/speed_value"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/avg_speed"
                android:layout_marginTop="@dimen/padding_small"
                style="@style/default_label"
                />
            <TextView
                android:id="@+id/avg_speed_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/avg_speed_label"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="15.99km\\h"
                style="@style/default_label_value"
                />

            <TextView
                android:id="@+id/time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/avg_speed_value"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/time"
                android:layout_marginTop="@dimen/padding_small"
                style="@style/default_label"
                />
            <TextView
                android:id="@+id/time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/time_label"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="00h 00m 10s"
                style="@style/default_label_value"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        >
        <androidx.constraintlayout.widget.Placeholder
            android:id="@+id/floating_placeholder"
            android:layout_width="54dp"
            android:layout_height="54dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="@dimen/padding_large"
            />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/padding_large"
            app:backgroundTint="@android:color/white"
            android:src="@drawable/ic_record"
            android:translationZ="101dp"
            />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/padding_large"
            app:backgroundTint="@color/red"
            android:src="@drawable/ic_stop"
            android:visibility="gone"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
